[metadata]
name = nbgitpuller-downloader-googledrive
version = 0.1.0
author = Sean Morris
author_email = sean.smorris@berkeley.edu
description = Downloads compressed archives from Google Drive for nbgitpuller
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sean-morris/nbgitpuller-downloader-googledrive
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
nbgitpuller =
    googledrive=nbgitpuller_downloader_googledrive.googledrive_downloader